# PyTest-Full-Stack

./: .coverage  .gitignore  COMMANDS.md  README.md  ci-cd_README.md  cmd.md  database.db  pytest.ini  report.html  report2.html  requirements.txt  tox.ini
_docker-pytest-poetry-fixtup/: README.md  pyproject.toml  requirements.txt
_docker-pytest-poetry-fixtup/tests/: test_postgressql_database.py
config/: config.ini  config_pwe.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_04bab0dac64bee7a_test_joke_01_py.html  z_04bab0dac64bee7a_test_joke_02_py.html  z_12bcae31049cfa11_conftest_py.html  z_12bcae31049cfa11_test_indirect_params_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_sample_py.html  z_150fba4f5437fbd5___init___py.html  z_150fba4f5437fbd5_conftest_py.html  z_150fba4f5437fbd5_student_py.html  z_150fba4f5437fbd5_test_student_py.html  z_1f554066f2153aa0_my_abc_py.html  z_1f554066f2153aa0_test_my_abc_py.html  z_22af9e0f4e7610af___init___py.html  z_26f2213a832f1dbf_robot_py.html  z_26f2213a832f1dbf_test_robot_py.html  z_2753981f767f433e___init___py.html  z_2a3d642e20d35c75_test_00_args_py.html  z_2a3d642e20d35c75_test_01_page_py.html  z_2a3d642e20d35c75_test_02_text_py.html  z_2a3d642e20d35c75_test_03_test_attribute_py.html  z_2a3d642e20d35c75_test_04_element_state_py.html  z_2a3d642e20d35c75_test_06_checkbox_py.html  z_2a3d642e20d35c75_test_07_option_menu_py.html  z_2a67c2c06e00d4a1___init___py.html  z_2a67c2c06e00d4a1_sample_py.html  z_2a67c2c06e00d4a1_test_sample_py.html  z_2aa698b04a3563b2_linereader_py.html  (+134 more)
(+362 files in other folders)
